Section 19: Repeating Stuff With Loops.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Section 1X: JavaScript Loops</title>
+    <title>Section 19: Repeating Stuff With Loops</title>
 </head>
 
 <body>
-  <h2>Section 1X: JavaScript Loops</h2>
+  <h2>Section 19: Repeating Stuff With Loops</h2>
     <nav>
         <ul>
             <li><a href="01_ForLoops/index.html">For Loops</a></li>
